<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f1f1f1"
    >


    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_background"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/font_color1"
        android:textSize="20dp"></TextView>

    <ImageButton
        android:id="@+id/search"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/search"></ImageButton>

    <ImageButton
        android:id="@+id/menu_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:onClick="onUserSelected"
        android:scaleType="fitCenter"
        android:src="@drawable/menu"></ImageButton>

    <!--缺少一个根据进度改变的事件-->

    <TextView
        android:id="@+id/today_plan"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_below="@+id/home_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_style"
        android:elevation="8dp"
        android:gravity="center"
        android:text="@string/today"
        android:textColor="@color/font_color1"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:id="@+id/total_plan"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/home_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="120dp"
        android:layout_toRightOf="@+id/today_plan"
        android:background="@drawable/round_style"
        android:elevation="8dp"
        android:gravity="center"
        android:text="@string/plan"
        android:textColor="@color/font_color1"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/last_days"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/total_plan"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/today_plan"
        android:background="@drawable/round_style"
        android:elevation="8dp"
        android:gravity="center"
        android:text="@string/already"
        android:textColor="@color/font_color1"
        android:textSize="20dp">

    </TextView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="320dp"
        android:layout_height="10dp"
        android:layout_below="@+id/last_days"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:max="100"
        android:progress="80"
        android:elevation="2dp"
        android:progressDrawable="@drawable/progress_bar"></ProgressBar>

    <Button
        android:id="@+id/start_button"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_below="@+id/progress_bar"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_style"
        android:elevation="10dp"
        android:text="@string/start"
        android:textColor="@color/font_color1"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        >

    </Button>



</RelativeLayout>
